--- a/notes/2509/4-week/010-DNR.md
+++ b/notes/2509/4-week/010-DNR.md
@@ -11,8 +11,8 @@
 graph LR
 A[论文核心：DNR——去噪神经重排序器（多阶段推荐优化）] --> B[基础信息]
 
-B --> B1[论文标题：Rejuvenating Cross-Entropy Loss in Knowledge Distillation for Recommender Systems]
-B --> B2[作者团队：Zhangchi Zhu, Wei Zhang]
+B --> B1[论文标题：Denoising Neural Reranker for Recommender Systems]
+B --> B2[作者团队：Wenyu Mao, Shuchang Liu, Hailan Yang, Xiaobei Wang, Xiaoyu Yang, Xu Gao, Xiang Li, Lantao Hu, Han Li, Kun Gai, An Zhang, Xiang Wang]
 B --> B3[接收会议：Information Retrieval （cs.IR）; Machine Learning （cs.LG）]
 B --> B4[核心定位：RCE-KD]
 
