feat(每周推荐): 4-week
1. 9月第四周论文第十篇 论文核心：DNR——去噪神经重排序器（多阶段推荐优化）

--- a/notes/2509/4-week/010-DNR.md
+++ b/notes/2509/4-week/010-DNR.md
@@ -31,7 +31,7 @@ D --> D1[重排序的去噪本质]
 D1 --> D11[实证证据：检索器嵌入无法区分目标物品，重排序器嵌入聚类清晰（图1c/d）]
 D1 --> D12[理论定义：检索器分数x（噪声）→重排序器去噪→用户反馈z（真实信号）]
 D --> D2[直接优化的局限]
-D2 --> D21[目标函数：$`mathcal（L）_（direct）=-\mathbb（E）_（x\sim p_x）（log q_\theta（z|x））$]
+D2 --> D21[目标函数：$`mathcal（L）_（direct）=-\mathbb（E）_（x\sim p_x）（log q_\theta（z\x））$]
 D2 --> D22[缺陷：存在$L_1$（模型与真实反馈偏差）和$L_2$（检索器先验与反馈后验KL散度）]
 
 A --> E[DNR框架设计]
@@ -40,9 +40,9 @@ E --> E1[1. 噪声生成模块]
 E1 --> E11[启发式方案：高斯噪声（$`epsilon \sim \mathcal（N）（0,1）$）、Beta噪声（$`epsilon \sim Beta（0.5,0.5）$）]
 E1 --> E12[模型基方案：2层MLP，合成分数$x'=（1-\lambda_c）z + \lambda_c\epsilon$（$`lambda_c$=0.3-0.5）]
 E --> E2[2. 三大损失目标]
-E2 --> E21[去噪损失$`mathcal（L）_z$：$-\mathbb（E）_（x'\sim p_\phi）（log q_\theta（z|x'））$（更新重排序器）]
-E2 --> E22[对抗生成损失$`mathcal（L）_（adv）$：$min_\phi log q_\theta（z|x'）$（更新噪声生成器）]
-E2 --> E22[分布正则损失$`mathcal（L）_x$：$D_（KL）（p_\phi（x'|z） \| p_x（x））$（对齐分布）]
+E2 --> E21[去噪损失$`mathcal（L）_z$：$-\mathbb（E）_（x'\sim p_\phi）（log q_\theta（z\x'））$（更新重排序器）]
+E2 --> E22[对抗生成损失$`mathcal（L）_（adv）$：$min_\phi log q_\theta（z\x'）$（更新噪声生成器）]
+E2 --> E22[分布正则损失$`mathcal（L）_x$：$D_（KL）（p_\phi（x'\z） \ p_x（x））$（对齐分布）]
 E --> E3[3. 训练流程]
 E3 --> E31[前期（$epoch \leq \lambda_e$）：启发式噪声训练重排序器（$`lambda_e$=40-100）]
 E3 --> E32[后期（$epoch > \lambda_e$）：模型基噪声，联合优化双模块]
