--- a/notes/2509/4-week/010-DNR.md
+++ b/notes/2509/4-week/010-DNR.md
@@ -31,7 +31,7 @@ D --> D1[重排序的去噪本质]
 D1 --> D11[实证证据：检索器嵌入无法区分目标物品，重排序器嵌入聚类清晰（图1c/d）]
 D1 --> D12[理论定义：检索器分数x（噪声）→重排序器去噪→用户反馈z（真实信号）]
 D --> D2[直接优化的局限]
-D2 --> D21[目标函数：$`mathcal（L）_（direct）=-\mathbb（E）_（x\sim p_x）（log q_\theta（z\x））$]
+D2 --> D21[目标函数：$`mathcal（L）_（direct）=-\mathbb（E）_（x\sim p_x）（log q-\theta（z\x））$]
 D2 --> D22[缺陷：存在$L_1$（模型与真实反馈偏差）和$L_2$（检索器先验与反馈后验KL散度）]
 
 A --> E[DNR框架设计]
