feat(每周推荐): 4-week
1. 9月第四周论文  论文核心：D3Rec——动态漂移感知的多模态推荐框架

--- a/notes/2509/4-week/011-D3Rec.md
+++ b/notes/2509/4-week/011-D3Rec.md
@@ -38,7 +38,7 @@ D --> D3[3. 阶段式偏好更新策略]
 D3 --> D31[短期更新：漂移发生时实时更新短期偏好嵌入（窗口W=7天）]
 D3 --> D32[长期校准：每周1次融合短期与长期偏好（防止漂移误判）]
 D3 --> D33[缺失适配：模态缺失时用历史权重均值补全，避免融合失效]
-D --> D4[4. 总损失函数：（mathcal（L） = \mathcal（L）_（BPR） + \alpha \cdot \mathcal（L）_（drift） + \beta \cdot \mathcal（L）_（fusion}）]
+D --> D4[4. 总损失函数：（mathcal（L） = \mathcal（L）_（BPR） + \alpha \cdot \mathcal（L）_（drift） + \beta \cdot \mathcal（L）_（fusion））]
 
 A --> E[实验设置]
 
