--- a/notes/2509/4-week/012-CDP.md
+++ b/notes/2509/4-week/012-CDP.md
@@ -11,8 +11,8 @@
 graph LR
 A[论文核心：CDP——用于CTR预测的条件扩散净化用户兴趣建模框架] --> B[基础信息]
 
-B --> B1[论文标题：Shilling Recommender Systems by Generating Side-feature-aware Fake User Profiles]
-B --> B2[作者团队：Yuanrong Wang, Yingpeng Du]
+B --> B1[论文标题：Adaptive User Interest Modeling via Conditioned Denoising Diffusion For Click-Through Rate Prediction]
+B --> B2[作者团队：Qihang Zhao, Xiaoyang Zheng, Ben Chen, Zhongbo Sun, Chenyi Lei]
 B --> B3[接收会议：Information Retrieval （cs.IR）; Machine Learning （cs.LG）]
 B --> B4[核心定位：CDP]
 
@@ -29,16 +29,16 @@ A --> D[方法论：CDP三阶段架构]
 D --> D1[1. 类别门控序列池化与噪声注入]
 D1 --> D11[类别过滤：保留与目标物品同类别行为（$\mathcal（H）_（cat）$）]
 D1 --> D12[均值池化：生成初始意图向量$z_0$]
-D1 --> D13[噪声注入：高斯噪声$z_t=\sqrt{\overline{\alpha}_t}z_0+\sqrt{1-\overline{\alpha}_t}\varepsilon$（$\varepsilon\sim\mathcal{N}(0,I)$）]
+D1 --> D13[噪声注入：高斯噪声$z_t=\sqrt（\overline（alpha）_t）z_0+\sqrt（1-\overline（alpha）_t）\varepsilon$（$\varepsilon\sim\mathcal（N）（0,I）$）]
 D --> D2[2. 自适应条件构建（MoE融合）]
 D2 --> D21[三类条件信号]
 D2 --> D21[协同条件$c_（co）$：Q-U-I三元交互（含双线性项）]
 D2 --> D21[上下文条件$c_（ctx）$：时段/页面等（两层MLP编码）]
 D2 --> D21[场景条件$c_（scene）$：客户端/搜索源等（两层MLP编码）]
-D2 --> D22[MoE门控：$g=softmax(W[c_{co}\|c_{ctx}\|c_{scene}])$，加权生成最终条件$c$]
+D2 --> D22[MoE门控：$g=softmax（W（c_（co）\|c_（ctx）\|c_（scene）））$，加权生成最终条件$c$]
 D --> D3[3. 条件去噪网络]
-D3 --> D31[去噪过程：$h_{t+1}=\epsilon_\theta(h_t,t,c)$（MLP作为去噪器）]
-D3 --> D32[损失函数：$\mathcal{L}_{loss}=\mathcal{L}_{recon}+\mathcal{L}_{BCE}$（重构损失+二分类损失）]
+D3 --> D31[去噪过程：$h_（t+1）=\epsilon_\theta（h_t,t,c）$（MLP作为去噪器）]
+D3 --> D32[损失函数：$\mathcal（L）_（loss）=\mathcal（L）_（recon）+\mathcal（L）_（BCE）$（重构损失+二分类损失）]
 D3 --> D33[推理：20步去噪平衡效率与效果]
 
 A --> E[实验设置]
@@ -61,44 +61,6 @@ A --> G[结论与未来方向]
 G --> G1[结论：CDP有效解决噪声分离与上下文适应问题，工业落地价值高]
 G --> G2[局限：冷启动/低活跃用户建模不足，条件融合粒度粗]
 G --> G3[未来：元学习增强低数据场景，细粒度条件提取]
-
-```mindmap
-## 中心主题：CDP——用于CTR预测的条件扩散净化用户兴趣建模框架
-### 一、研究背景与核心问题
-- 行为序列特性：用户行为是“兴趣化石”，含真实意图但受噪声污染
-- 现有方法局限
-  - 噪声未分离：默认行为=真实偏好，忽视暴露偏差/类别漂移
-  - 表示静态：无法适应查询-用户-物品-上下文（Q-U-I-S）动态变化
-  - 条件利用不足：缺乏多源上下文的个性化融合
-- 核心目标：生成纯净、上下文自适应的兴趣表示以提升CTR预测
-### 二、方法论：CDP三阶段架构
-- 1. 类别门控序列池化与噪声注入
-  - 类别过滤：保留与目标物品同类别行为（$\mathcal{H}_{cat}$）
-  - 均值池化：生成初始意图向量$z_0$
-  - 噪声注入：高斯噪声$z_t=\sqrt{\overline{\alpha}_t}z_0+\sqrt{1-\overline{\alpha}_t}\varepsilon$（$\varepsilon\sim\mathcal{N}(0,I)$）
-- 2. 自适应条件构建（MoE融合）
-  - 三类条件信号
-    - 协同条件$c_{co}$：Q-U-I三元交互（含双线性项）
-    - 上下文条件$c_{ctx}$：时段/页面等（两层MLP编码）
-    - 场景条件$c_{scene}$：客户端/搜索源等（两层MLP编码）
-  - MoE门控：$g=softmax(W[c_{co}\|c_{ctx}\|c_{scene}])$，加权生成最终条件$c$
-- 3. 条件去噪网络
-  - 去噪过程：$h_{t+1}=\epsilon_\theta(h_t,t,c)$（MLP作为去噪器）
-  - 损失函数：$\mathcal{L}_{loss}=\mathcal{L}_{recon}+\mathcal{L}_{BCE}$（重构损失+二分类损失）
-  - 推理：20步去噪平衡效率与效果
-### 三、实验设置
-- 1. 数据集：工业搜索日志（60天训练+1天测试，日样本3亿，平均序列长度2000）
-- 2. 基线方法：两类共7种（行为建模：SIM/QIN/TWIN/HSTU；扩散推荐：DDRM/DiffRec）
-- 3. 评估指标：离线（AUC/UAUC/GAUC）、在线（GMV/订单数/CTR/延迟）
-- 4. 参数：Adam优化器，批大小4096（4×A10 GPU），扩散步数100，学习率（稠密0.00025/稀疏0.0005）
-### 四、实验结果
-- 1. 离线性能：CDP全指标最优（AUC 0.7402>基线0.7332）
-- 2. 消融实验：移除MoE损失最大（AUC降0.0047），协同条件影响最显著
-- 3. 在线性能：GMV+1.240%、订单+1.032%、CTR+0.745%，延迟+2ms
-### 五、结论与未来方向
-- 结论：CDP有效解决噪声分离与上下文适应问题，工业落地价值高
-- 局限：冷启动/低活跃用户建模不足，条件融合粒度粗
-- 未来：元学习增强低数据场景，细粒度条件提取
 ```
 
 
@@ -122,42 +84,42 @@ G --> G3[未来：元学习增强低数据场景，细粒度条件提取]
 
 #### 三、CDP框架详细设计
 ##### 3.1 问题定义
-针对目标交互 tuple \((q,u,i,s)\)（查询\(q\)、用户\(u\)、候选物品\(i\)、上下文\(s\)），目标是学习上下文自适应兴趣嵌入\(z^*\)，使CTR预测满足：  
-\[p(click|q,u,i,s)=\sigma\left(f_{DNN}\left(z^* \| \phi_{sparse}(q,u,i,s)\right)\right)\]  
-其中\(\sigma\)为sigmoid函数，\(\phi_{sparse}\)为原始稀疏特征（如用户ID、物品ID）。
+针对目标交互 tuple $`((q,u,i,s))`$（查询$`(q`$)、用户$`(u)`$、候选物品$`(i)`$、上下文$`(s)`$），目标是学习上下文自适应兴趣嵌入$`(z^*)`$，使CTR预测满足：  
+$`[p(click|q,u,i,s)=\sigma\left(f_{DNN}\left(z^* \| \phi_{sparse}(q,u,i,s)\right)\right)]`$  
+其中$`(\sigma)`$为sigmoid函数，$`(\phi_{sparse})`$为原始稀疏特征（如用户ID、物品ID）。
 
 ##### 3.2 阶段1：类别门控序列池化与噪声注入
-- **步骤1：类别过滤**：移除与目标物品\(i\)类别不一致的行为，降低跨类别噪声：  
-  \[\mathcal{H}_{cat}=\left\{e_t \in \mathcal{H} \mid category(e_t)=category(i)\right\}\]  
-  （\(\mathcal{H}\)为原始行为序列，\(e_t\)为单行为嵌入）
+- **步骤1：类别过滤**：移除与目标物品$`(i)`$类别不一致的行为，降低跨类别噪声：  
+  $`[\mathcal{H}_{cat}=\left\{e_t \in \mathcal{H} \mid category(e_t)=category(i)\right\}]`$  
+  （$`(\mathcal{H})`$为原始行为序列，$`(e_t)`$为单行为嵌入）
 - **步骤2：均值池化**：将过滤后的序列压缩为初始意图向量，模拟“低通滤波”衰减高频噪声：  
-  \[z_0=\frac{1}{|\mathcal{H}_{cat}|}\sum_{e_t \in \mathcal{H}_{cat}}e_t\]
-- **步骤3：噪声注入**：遵循标准扩散流程，在第\(t\)步注入高斯噪声，模拟行为序列的污染过程：  
-  \[z_t=\sqrt{\overline{\alpha}_t}z_0+\sqrt{1-\overline{\alpha}_t}\varepsilon,\quad \varepsilon \sim \mathcal{N}(0,I)\]  
-  （\(\overline{\alpha}_t=\prod_{k=1}^t\alpha_k\)为噪声系数累积乘积，控制噪声强度）
+  $`[z_0=\frac{1}{|\mathcal{H}_{cat}|}\sum_{e_t \in \mathcal{H}_{cat}}e_t]`$
+- **步骤3：噪声注入**：遵循标准扩散流程，在第$`(t`$)步注入高斯噪声，模拟行为序列的污染过程：  
+  $`[z_t=\sqrt{\overline{\alpha}_t}z_0+\sqrt{1-\overline{\alpha}_t}\varepsilon,\quad \varepsilon \sim \mathcal{N}(0,I)]`$  
+  （$`(overline{\alpha}_t=\prod_{k=1}^t\alpha_k)`$为噪声系数累积乘积，控制噪声强度）
 
 ##### 3.3 阶段2：自适应条件构建（MoE融合）
 为提取多源上下文的个性化指导信号，设计三类条件并通过MoE自适应融合：
-1. **协同条件（\(c_{co}\)）**：捕捉Q-U-I三元交互，含原始嵌入与双线性项（如\(q\odot u\)、\(u-i\)），经两层MLP编码：  
-   \[c_{co}=\phi_{co}\left([q\|u\|i\|q\odot u\|u-i\|q\odot i]\right)\]
-2. **上下文条件（\(c_{ctx}\)）**：编码时段（如早/中/晚）、页面索引等动态特征，经两层MLP：  
-   \[c_{ctx}=\phi_{ctx}(x_{ctx})\]
-3. **场景条件（\(c_{scene}\)）**：编码客户端类型（iOS/Android）、搜索来源（首页/个人中心）等场景特征，经两层MLP：  
-   \[c_{scene}=\phi_{scene}(x_{scene})\]
+1. **协同条件（$`(c_{co})`$）**：捕捉Q-U-I三元交互，含原始嵌入与双线性项（如$`(q\odot u)`$、$`(u-i)`$），经两层MLP编码：  
+   $`[c_{co}=\phi_{co}\left([q\|u\|i\|q\odot u\|u-i\|q\odot i]\right)]`$
+2. **上下文条件（$`(c_{ctx})`$）**：编码时段（如早/中/晚）、页面索引等动态特征，经两层MLP：  
+   $`[c_{ctx}=\phi_{ctx}(x_{ctx})]`$
+3. **场景条件（$`(c_{scene})`$）**：编码客户端类型（iOS/Android）、搜索来源（首页/个人中心）等场景特征，经两层MLP：  
+   $`[c_{scene}=\phi_{scene}(x_{scene})]`$
 4. **MoE门控融合**：通过门控网络学习个性化权重，避免固定融合的僵化：  
-   \[g=softmax\left(W\left[c_{co}\|c_{ctx}\|c_{scene}\right]\right),\quad c=\sum_{j\in\{co,ctx,scene\}}g_j c_j\]  
-   （\(W\in\mathbb{R}^{3\times3d}\)为门控参数，\(g_j\)为第\(j\)类条件的权重）
+   $`[g=softmax\left(W\left[c_{co}\|c_{ctx}\|c_{scene}\right]\right),\quad c=\sum_{j\in\{co,ctx,scene\}}g_j c_j]`$  
+   （$`(W\in\mathbb{R}^{3\times3d})`$为门控参数，$`(g_j)`$为第$`(j)`$类条件的权重）
 
 ##### 3.4 阶段3：条件去噪网络与损失函数
-- **去噪过程**：采用多层MLP作为去噪器\(\epsilon_\theta(z_t,t,c)\)，在条件\(c\)指导下迭代去噪：  
-  \[h_{t+1}=\epsilon_\theta(h_t,t,c),\quad h_0=z_t\]  
-  （\(h_t\)为第\(t\)步去噪中间结果，最终输出噪声预测\(\hat{\varepsilon}=W_{out}h_L\)，\(L=100\)为总去噪步数）
+- **去噪过程**：采用多层MLP作为去噪器$`(\epsilon_\theta(z_t,t,c))`$，在条件$`(c)`$指导下迭代去噪：  
+  $`[h_{t+1}=\epsilon_\theta(h_t,t,c),\quad h_0=z_t]`$  
+  （$`(h_t)`$为第$`(t)`$步去噪中间结果，最终输出噪声预测$`(\hat{\varepsilon}=W_{out}h_L)`$，$`(L=100)`$为总去噪步数）
 - **损失函数**：联合优化噪声重构与CTR预测：  
-  \[\begin{aligned}\mathcal{L}_{loss}&=\mathcal{L}_{recon}+\mathcal{L}_{BCE} \\&=\mathbb{E}_{z_0,\varepsilon,t}\left[\|\hat{\varepsilon}-\varepsilon\|_2^2\right]+y\log\sigma+(1-y)\log(1-\sigma)\end{aligned}\]  
-  其中\(\mathcal{L}_{recon}\)为噪声重构的MSE损失，\(\mathcal{L}_{BCE}\)为CTR预测的二分类交叉熵损失（\(y\)为点击标签，\(\sigma\)为预测分数）。
+  $`[\begin{aligned}\mathcal{L}_{loss}&=\mathcal{L}_{recon}+\mathcal{L}_{BCE} \\&=\mathbb{E}_{z_0,\varepsilon,t}\left[\|\hat{\varepsilon}-\varepsilon\|_2^2\right]+y\log\sigma+(1-y)\log(1-\sigma)\end{aligned}]`$  
+  其中$`(\mathcal{L}_{recon})`$为噪声重构的MSE损失，$`(\mathcal{L}_{BCE})`$为CTR预测的二分类交叉熵损失（$`(y)`$为点击标签，$`(\sigma)`$为预测分数）。
 
 ##### 3.5 推理与下游集成
-- 在线推理：采用**20步去噪**（平衡效率与效果），生成的兴趣嵌入\(z^*\)直接拼接稀疏特征输入下游DNN，无需修改现有架构；
+- 在线推理：采用**20步去噪**（平衡效率与效果），生成的兴趣嵌入$`(z^*)`$直接拼接稀疏特征输入下游DNN，无需修改现有架构；
 - 延迟控制：仅增加2ms推理延迟，满足工业级低延迟要求（毫秒级响应）。
 
 
@@ -223,7 +185,7 @@ G --> G3[未来：元学习增强低数据场景，细粒度条件提取]
 **答案**：CDP通过“分阶段协同设计”同时应对两大挑战：
 1. **噪声污染解决**：
   - 第一步**类别门控过滤**：移除与目标物品类别不一致的行为（如用户搜索“手机”时过滤“服装”行为），降低跨类别噪声；
-  - 第二步**扩散去噪**：先注入高斯噪声模拟行为污染过程，再通过条件去噪网络\(\epsilon_\theta(z_t,t,c)\)，在Q-U-I-Context条件指导下迭代去除噪声，生成纯净兴趣表示（如暴露偏差导致的误点击被去噪）；
+  - 第二步**扩散去噪**：先注入高斯噪声模拟行为污染过程，再通过条件去噪网络$`(epsilon_\theta(z_t,t,c))`$，在Q-U-I-Context条件指导下迭代去除噪声，生成纯净兴趣表示（如暴露偏差导致的误点击被去噪）；
 2. **上下文适应性解决**：
   - 多源条件构建：融合查询（用户意图）、上下文（时段/页面）、场景（客户端）三类信号，覆盖动态场景维度；
   - MoE个性化融合：通过门控网络学习用户级条件权重（如学生用户更依赖查询，上班族更依赖时段），避免固定融合的僵化；
@@ -233,14 +195,14 @@ G --> G3[未来：元学习增强低数据场景，细粒度条件提取]
 #### 问题2：CDP中MoE（混合专家系统）融合机制的具体设计与作用是什么？为何它比固定权重融合更有效？
 **答案**：
 1. **MoE融合的具体设计**：
-  - 输入：三类条件信号的拼接向量\([c_{co}\|c_{ctx}\|c_{scene}]\)（协同条件+上下文条件+场景条件）；
-  - 门控网络：通过全连接层+softmax生成权重\(g\in\mathbb{R}^3\)，满足\(\sum g_j=1\)，公式为\(g=softmax(W[c_{co}\|c_{ctx}\|c_{scene}])\)；
-  - 输出：加权求和生成最终条件\(c=\sum g_j c_j\)，指导后续去噪过程；
+  - 输入：三类条件信号的拼接向量$`([c_{co}\|c_{ctx}\|c_{scene}])`$（协同条件+上下文条件+场景条件）；
+  - 门控网络：通过全连接层+softmax生成权重$`(g\in\mathbb{R}^3)`$，满足$`(\sum g_j=1)`$，公式为$`(g=softmax(W[c_{co}\|c_{ctx}\|c_{scene}]))`$；
+  - 输出：加权求和生成最终条件$`(c=\sum g_j c_j)`$，指导后续去噪过程；
 2. **核心作用**：实现**个性化条件依赖适配**——不同用户对条件信号的依赖程度不同（如：
-  - 新用户：更依赖查询（\(g_{co}\)高），因行为少、场景适应性弱；
-  - 老用户：更依赖场景（\(g_{scene}\)高），因行为稳定、场景影响更大）；
+  - 新用户：更依赖查询（$`(g_{co})`$高），因行为少、场景适应性弱；
+  - 老用户：更依赖场景（$`(g_{scene})`$高），因行为稳定、场景影响更大）；
 3. **优于固定权重的原因**：
-  - 固定权重（如\(c=(c_{co}+c_{ctx}+c_{scene})/3\)）假设所有用户对条件的依赖一致，无法适配个体差异；
+  - 固定权重（如$`(c=(c_{co}+c_{ctx}+c_{scene})/3)`$）假设所有用户对条件的依赖一致，无法适配个体差异；
   - MoE通过数据驱动学习权重，使条件指导更精准（消融实验显示，无MoE时AUC下降0.47%），尤其在用户异质性强的工业场景中优势更显著。
 
 
