feat(每周推荐): 4-week
1. 9月第四周论文  论文核心：CDP——用于CTR预测的条件扩散净化用户兴趣建模框架

--- a/notes/2509/4-week/012-CDP.md
+++ b/notes/2509/4-week/012-CDP.md
@@ -35,7 +35,7 @@ D2 --> D21[三类条件信号]
 D2 --> D21[协同条件$c_（co）$：Q-U-I三元交互（含双线性项）]
 D2 --> D21[上下文条件$c_（ctx）$：时段/页面等（两层MLP编码）]
 D2 --> D21[场景条件$c_（scene）$：客户端/搜索源等（两层MLP编码）]
-D2 --> D22[MoE门控：$g=softmax（W（c_（co）\|c_（ctx）\|c_（scene）））$，加权生成最终条件$c$]
+D2 --> D22[MoE门控：$g=softmax（W（c-（co）\|c-（ctx）\|c-（scene）））$，加权生成最终条件$c$]
 D --> D3[3. 条件去噪网络]
 D3 --> D31[去噪过程：$h_（t+1）=\epsilon_\theta（h_t,t,c）$（MLP作为去噪器）]
 D3 --> D32[损失函数：$\mathcal（L）_（loss）=\mathcal（L）_（recon）+\mathcal（L）_（BCE）$（重构损失+二分类损失）]
