feat(每周推荐): 11月第二周
1. 11月第二周 第四篇 论文核心：HID—一种即插即用的框架，旨在解决传统会话推荐（SBR）中**长尾性能与推荐精度的“跷跷板效应”

--- a/notes/2511/2-week/004-HID.md
+++ b/notes/2511/2-week/004-HID.md
@@ -27,9 +27,9 @@ A --> D[HID框架设计]
 D --> D1[核心定位：模型无关、即插即用，可集成于任意SBR模型]
 D --> D2[两大核心模块]
 D2 --> D21[混合意图学习]
-D21 --> D211[步骤1：属性聚类生成初步意图（如“食品”“餐具”）]
+D21 --> D211[步骤1：属性聚类生成初步意图（如食品 餐具）]
 D21 --> D212[步骤2：构建初步意图图（边权重=属性共现频率）]
-D21 --> D213[步骤3：谱聚类生成混合意图（如“食品+餐具→烹饪意图”）]
+D21 --> D213[步骤3：谱聚类生成混合意图（如 食品+餐具→烹饪意图）]
 D21 --> D214[步骤4：划分目标意图（含会话下一个物品）与噪声意图（其他会话目标意图）]
 D2 --> D22[意图约束损失（ICLoss）]
 D22 --> D221[长尾约束：min Var(会话与目标意图物品相似度)，近似为min 会话-目标意图距离]
