feat(每周推荐): 11月第一周
1. 11月第二周 第十篇 论文核心：GGR-基于结构化人类先验的多头解码生成式推荐框架

--- a/notes/2511/2-week/010-GGR.md
+++ b/notes/2511/2-week/010-GGR.md
@@ -38,7 +38,7 @@ D22 --> D222[公式：]
 D22 --> D223[优势：缓解稀有先验组合的数据稀疏，借鉴贝叶斯分层建模的“收缩效应”]
 D2 --> D23[3. 训练与推理优化]
 D23 --> D231[组内负采样：仅在同一先验子集（Omega_k）内采样负例，增强区分度]
-D23 --> D232[损失权重：频率平衡（（w_k^（freq） = |Y_k|/\sum|Y_j|））+时间折扣（（\gamma \in （0,1）），优先近未来预测）]
+D23 --> D232[损失权重：频率平衡+时间折扣，优先近未来预测）]
 D23 --> D233[推理融合：采用最大融合策略，增强可解释性]
 D --> D3[支持的人类先验类型]
 D3 --> D31[物品先验：商品分类、内容流派（如Pixel8M的8个视频类别）]
