feat(每周推荐): 11月第四周
1. 11月第四周 第四篇  论文核心：GRASP——核心解决现有LLM增强序列推荐中幻觉噪声问题

--- a/notes/2511/4-week/003-C3BV.md
+++ b/notes/2511/4-week/003-C3BV.md
@@ -36,7 +36,7 @@ A --> E[理论分析（PreNT游戏）]
 
 E --> E1[模型设定]
 E1 --> E11[单用户+两类内容：趋势内容（$N_T$个）、 niche内容（$N_N$个）]
-E1 --> E12[用户偏好：$u=\theta_T v_T + \theta_N v_N$（$\theta_T/\theta_N$ 区分偏好类型）]
+E1 --> E12[用户偏好：$`u=\theta_T v_T + \theta_N v_N$（$\theta_T/\theta_N`$ 区分偏好类型）]
 E --> E2[核心结论]
 E2 --> E21[非策略环境：趋势偏好用户 有下界（强正则化）；niche偏好有上界（弱正则化）]
 E2 --> E22[策略环境：恒有上界（弱正则化），趋势偏好用户中]
