feat(每周推荐): 11月第四周
1. 11月第四周 剩余5篇

--- a/notes/2511/4-week/020-SAE.md
+++ b/notes/2511/4-week/020-SAE.md
@@ -15,66 +15,38 @@ B --> B3[接收会议：Information Retrieval （cs.IR）; Artificial Intelligen
 B --> B4[核心定位：SAE]
 
 A --> C[研究背景：核心痛点]
-C --> C1[解释保真度被忽视]
-C1 --> C11[现有方法侧重说服力，未反映模型真实推理逻辑]
-C1 --> C12[推荐数据稀疏、二元特性，传统PI方法基线失效]
-C --> C2[传统解释方法局限]
-C2 --> C21[启发式方法（余弦相似度）：无反事实支撑]
-C2 --> C22[模型无关方法（SHAP、LIME）：保真度未充分验证]
+C --> C1[推荐嵌入可解释性差]
+C1 --> C11[latent维度无明确语义，降低用户信任]
+C1 --> C12[难以调试、保障公平性与问责制]
+C --> C2[现有方案局限]
+C2 --> C21[LLM的SAE方法：未考虑推荐系统的用户-物品交互特性]
+C2 --> C22[推荐可解释方法：仅聚焦输出解释，未揭示嵌入语义]
 
-A --> D[核心框架：SPINRec]
+A --> D[核心方法：SAE单语义提取框架]
 
-D --> D1[1. 核心原理]
-D1 --> D11[路径积分（PI）：沿基线到用户数据的路径积分梯度]
-D1 --> D12[随机基线采样：从数据分布抽取κ个合理基线，选最优解释]
-D --> D2[2. 算法流程]
-D2 --> D21[输入：用户数据、推荐模型、目标物品、基线数量κ]
-D2 --> D22[步骤：采样基线→计算每条路径的解释→基于保真度选最优]
-D --> D3[3. 关键创新]
-D3 --> D31[适配推荐数据特性，捕捉观察/未观察交互影响]
-D3 --> D32[模型无关，兼容MF、VAE、NCF等主流模型]
+D --> D1[1. 基础架构]
+D1 --> D11[推荐模型：MF/NCF双塔架构，输出用户/物品嵌入]
+D1 --> D12[SAE结构：线性编码器（ReLU）+稀疏瓶颈+绑定解码器]
+D1 --> D13[Matryoshka SAE：嵌套字典（m₁<m₂<…<mₙ=m），捕捉层级概念]
+D --> D2[2. 损失函数]
+D2 --> D21[重构损失（L_rec）：α·L_emb（嵌入L2损失）+β·L_pred（预测MSE损失）]
+D2 --> D22[稀疏损失（L_sparse）：λ₁·L1正则+λ₂·KL散度（目标激活率ρ）]
+D --> D3[3. 训练流程]
+D3 --> D31[固定推荐模型参数，SAE事后训练]
+D3 --> D32[采样用户-物品对，计算L_total，梯度经冻结推荐模型反向传播]
 
 A --> E[实验验证]
 
-E --> E1[数据集：ML1M、Yahoo! Music、Pinterest]
-E --> E2[基线：Cosine、SHAP4Rec、DeepSHAP等8种方法]
-E --> E3[评估指标：POS-K、DEL-Ke、INS-Ke等反事实指标]
-E --> E4[关键结果：全场景超越基线，建立保真度新基准]
+E --> E1[数据集：MovieLens-1M（1M交互）、Last.FM（音乐交互）]
+E --> E2[基线模型：MF（内积评分）、NCF（MLP评分）]
+E --> E3[关键结果：语义纯度最高100%，事后干预提升目标物品排名]
 
 
 A --> F[核心价值]
 
-F --> F1[理论：首个将路径积分适配推荐系统，提出随机基线策略]
-F --> F2[实践：提供高保真解释，支持合规与用户信任构建]
-F --> F3[开源：代码与评估工具公开，助力后续研究]
-
-```mindmap
-## 研究背景：核心痛点
-- 推荐嵌入可解释性差
-  -  latent维度无明确语义，降低用户信任
-  - 难以调试、保障公平性与问责制
-- 现有方案局限
-  - LLM的SAE方法：未考虑推荐系统的用户-物品交互特性
-  - 推荐可解释方法：仅聚焦输出解释，未揭示嵌入语义
-## 核心方法：SAE单语义提取框架
-- 1. 基础架构
-  - 推荐模型：MF/NCF双塔架构，输出用户/物品嵌入
-  - SAE结构：线性编码器（ReLU）+稀疏瓶颈+绑定解码器
-  - Matryoshka SAE：嵌套字典（m₁<m₂<…<mₙ=m），捕捉层级概念
-- 2. 损失函数
-  - 重构损失（L_rec）：α·L_emb（嵌入L2损失）+β·L_pred（预测MSE损失）
-  - 稀疏损失（L_sparse）：λ₁·L1正则+λ₂·KL散度（目标激活率ρ）
-- 3. 训练流程
-  - 固定推荐模型参数，SAE事后训练
-  - 采样用户-物品对，计算L_total，梯度经冻结推荐模型反向传播
-## 实验验证
-- 数据集：MovieLens-1M（1M交互）、Last.FM（音乐交互）
-- 基线模型：MF（内积评分）、NCF（MLP评分）
-- 关键结果：语义纯度最高100%，事后干预提升目标物品排名
-## 核心价值
-- 理论：首次将单语义神经元适配推荐系统，保留交互语义
-- 实践：支持事后控制（过滤/推广），无需重训练
-- 应用：电影、音乐等推荐场景的可解释性与可控性优化
+F --> F1[理论：首次将单语义神经元适配推荐系统，保留交互语义]
+F --> F2[实践：支持事后控制（过滤/推广），无需重训练]
+F --> F3[应用：电影、音乐等推荐场景的可解释性与可控性优化]
 ```
 
 
@@ -98,26 +70,26 @@ F --> F3[开源：代码与评估工具公开，助力后续研究]
 #### 二、核心方法设计
 ##### 1. 基础框架与模型定义
 - **推荐模型基础**：采用双塔架构，用户/物品分别编码为嵌入，通过评分函数计算亲和力：
-  - 嵌入生成：\(e_u = f_u(x_u;\theta_u)\)，\(e_i = f_i(x_i;\theta_i)\)（\(x_u/x_i\)为用户/物品输入特征）；
-  - 评分函数：MF用内积\(\hat{y}_{u,i}=e_u^\top e_i\)，NCF用两层MLP（64→32→16隐藏单元）+Sigmoid。
+  - 嵌入生成：$`(e_u = f_u(x_u;\theta_u))`$，$`(e_i = f_i(x_i;\theta_i))`$（$`(x_u/x_i)`$为用户/物品输入特征）；
+  - 评分函数：MF用内积$`(\hat{y}_{u,i}=e_u^\top e_i)`$，NCF用两层MLP（64→32→16隐藏单元）+Sigmoid。
 - **SAE架构**：
-  - 编码：\(z = h_{enc}(e;\phi_{enc})\)（线性层+ReLU，输出稀疏向量\(z \in \mathbb{R}^m\)）；
-  - 解码：\(\tilde{e} = h_{dec}(z;\phi_{dec})\)（绑定线性解码器，与编码器权重共享）；
-  - Matryoshka SAE：嵌套字典大小\(M=\{m_1,m_2,...,m_n\}\)（如ML1M取m=22，Last.FM取m=70），层级捕捉从粗到细的概念。
+  - 编码：$`(z = h_{enc}(e;\phi_{enc}))`$（线性层+ReLU，输出稀疏向量$`(z \in \mathbb{R}^m)`$）；
+  - 解码：$`(\tilde{e} = h_{dec}(z;\phi_{dec}))`$（绑定线性解码器，与编码器权重共享）；
+  - Matryoshka SAE：嵌套字典大小$`(M=\{m_1,m_2,...,m_n\})`$（如ML1M取m=22，Last.FM取m=70），层级捕捉从粗到细的概念。
 
 ##### 2. 关键损失函数（核心创新）
-| 损失类型       | 计算方式                                                                 | 核心作用                                                                 |
-|----------------|--------------------------------------------------------------------------|--------------------------------------------------------------------------|
-| **嵌入级损失（L_emb）** | \(\|e - \tilde{e}\|_2^2\)                                                | 保证原始与重构嵌入的几何一致性                                           |
-| **预测级损失（L_pred）** | \(\frac{1}{|\mathcal{S}|}\sum_{(u,i)\in\mathcal{S}}(\hat{y}_{u,i}-\tilde{y}_{u,i})^2\) | 梯度反向传播至冻结推荐模型，保留用户-物品交互语义，\(\tilde{y}\)为重构嵌入的评分 |
-| **稀疏损失（L_sparse）** | \(\lambda_1\|\|z\|\|_1 + \lambda_2\sum KL(p_j\|\rho)\)                     | KL散度 penalize 神经元激活率\(p_j\)与目标率\(\rho\)的偏差，避免死亡神经元       |
-| **总损失**       | \(\mathcal{L}_{total} = \alpha\mathcal{L}_{emb} + \beta\mathcal{L}_{pred} + \mathcal{L}_{sparse}\) | 平衡重构精度、交互语义保留与稀疏性                                       |
+| 损失类型       | 计算方式                                                                                                                                                                   | 核心作用                                                                 |
+|----------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------|
+| **嵌入级损失（L_emb）** | $`(\|e - \tilde{e}\|_2^2)`$                                                                                                                                            | 保证原始与重构嵌入的几何一致性                                           |
+| **预测级损失（L_pred）** | $`(\frac{1}{\|\mathcal{S}\|}\sum_{(u,i)\in\mathcal{S}}(\hat{y}_{u,i}-\tilde{y}_{u,i})^2)`$ | 梯度反向传播至冻结推荐模型，保留用户-物品交互语义，$`(\tilde{y})`$为重构嵌入的评分 |
+| **稀疏损失（L_sparse）** | $`(\lambda_1\|\|z\|\|_1 + \lambda_2\sum KL(p_j\|\rho))`$                                                                                                               | KL散度 penalize 神经元激活率$`(p_j)`$与目标率$`(\rho)`$的偏差，避免死亡神经元       |
+| **总损失**       | $`(\mathcal{L}_{total} = \alpha\mathcal{L}_{emb} + \beta\mathcal{L}_{pred} + \mathcal{L}_{sparse})`$                                                                   | 平衡重构精度、交互语义保留与稀疏性                                       |
 
 ##### 3. 训练流程
-1. **预训练推荐模型**：在MF/NCF上训练至收敛，固定参数\(\theta_u,\theta_i,\theta_g\)；
+1. **预训练推荐模型**：在MF/NCF上训练至收敛，固定参数$`(\theta_u,\theta_i,\theta_g)`$；
 2. **SAE事后训练**：
-  - 采样用户-物品对\(\mathcal{S}\)，输入SAE得到重构嵌入\(\tilde{e}_u,\tilde{e}_i\)；
-  - 计算\(\mathcal{L}_{total}\)，梯度经冻结的评分函数\(g(\cdot)\)反向传播至SAE参数；
+  - 采样用户-物品对$`(\mathcal{S})`$，输入SAE得到重构嵌入$`(\tilde{e}_u,\tilde{e}_i)`$；
+  - 计算$`(\mathcal{L}_{total})`$，梯度经冻结的评分函数$`(g(\cdot))`$反向传播至SAE参数；
 3. **神经元识别**：用GPT-4.5对每个神经元的Top激活物品标注概念（如“Comedy”“Electronic”）。
 
 
@@ -127,7 +99,7 @@ F --> F3[开源：代码与评估工具公开，助力后续研究]
 |-------------------|--------------------------------------------------------------------------|
 | 数据集            | 1. MovieLens-1M（ML1M）：100万电影评分，用户6k+，物品4k+，标签含类型；<br>2. Last.FM：音乐交互数据，聚合至艺术家级，标签含风格 |
 | 推荐模型参数      | 嵌入维度：ML1M为20，Last.FM为100；优化器Adam，ML1M训练10轮，Last.FM训练30轮 |
-| SAE参数           | 瓶颈大小：ML1M为22，Last.FM为70；激活目标率\(\rho=0.05\)，α=1，β=0.1       |
+| SAE参数           | 瓶颈大小：ML1M为22，Last.FM为70；激活目标率$`(\rho=0.05)`$，α=1，β=0.1       |
 | 评估指标          | 语义纯度（Top-K激活物品中匹配概念的比例，K=10/20/50）、RBO/Kendall-Tau（推荐列表一致性） |
 
 ##### 2. 核心实验结果
