feat(每周推荐): 11月第四周
1. 11月第四周 剩余5篇

--- a/notes/2511/4-week/022-RIA.md
+++ b/notes/2511/4-week/022-RIA.md
@@ -15,72 +15,44 @@ B --> B3[接收会议：Information Retrieval （cs.IR）; Artificial Intelligen
 B --> B4[核心定位：RIA]
 
 A --> C[研究背景：核心痛点]
-C --> C1[解释保真度被忽视]
-C1 --> C11[现有方法侧重说服力，未反映模型真实推理逻辑]
-C1 --> C12[推荐数据稀疏、二元特性，传统PI方法基线失效]
-C --> C2[传统解释方法局限]
-C2 --> C21[启发式方法（余弦相似度）：无反事实支撑]
-C2 --> C22[模型无关方法（SHAP、LIME）：保真度未充分验证]
+C --> C1[排序与重排序 decouple]
+C1 --> C11[列表级评估模型表征弱，受 latency 限制架构简单]
+C1 --> C12[组合稀疏性：列表长度增加导致物品共现频率指数下降]
+C --> C2[现有方案缺陷]
+C2 --> C21[PRM/OCPM：分阶段建模，知识传递弱]
+C2 --> C22[YOLOR：假设位置-上下文独立，大规模场景效率低]
 
-A --> D[核心框架：SPINRec]
+A --> D[核心框架：RIA]
 
-D --> D1[1. 核心原理]
-D1 --> D11[路径积分（PI）：沿基线到用户数据的路径积分梯度]
-D1 --> D12[随机基线采样：从数据分布抽取κ个合理基线，选最优解释]
-D --> D2[2. 算法流程]
-D2 --> D21[输入：用户数据、推荐模型、目标物品、基线数量κ]
-D2 --> D22[步骤：采样基线→计算每条路径的解释→基于保真度选最优]
-D --> D3[3. 关键创新]
-D3 --> D31[适配推荐数据特性，捕捉观察/未观察交互影响]
-D3 --> D32[模型无关，兼容MF、VAE、NCF等主流模型]
+D --> D1[1. 用户-候选双Transformer（UCDT）]
+D1 --> D11[输入：用户上下文特征（ profile+行为序列）、候选列表嵌入]
+D1 --> D12[编码：HSTU处理序列，目标注意力建模交互]
+D1 --> D13[输出：点wise CTR预测（σ（MLP（x_i'）））]
+D --> D2[2. 上下文感知用户历史与目标（CUHT）]
+D2 --> D21[PIAU：自注意力建模会话内历史-候选交互]
+D2 --> D22[PTAU：位置感知注意力，关联目标列表与历史位置]
+D --> D3[3. 列表级多HSTU（LMH）]
+D3 --> D31[层级建模：多层HSTU堆叠，捕捉物品依赖]
+D3 --> D32[输出：列表wise CTR预测，损失L2=二分类交叉熵]
+D --> D4[4. 嵌入缓存（EC）]
+D4 --> D41[预计算：排序阶段缓存x_i''与H_k表征]
+D4 --> D42[存储：Redis缓存，降低重排序 latency]
+D --> D5[5. 损失与推理]
+D5 --> D51[总损失：L_total = L1（点wise）+ L2（列表wise）]
+D5 --> D52[推理：并行计算+缓存复用，RIA_small latency 28.2ms]
 
 A --> E[实验验证]
 
-E --> E1[数据集：ML1M、Yahoo! Music、Pinterest]
-E --> E2[基线：Cosine、SHAP4Rec、DeepSHAP等8种方法]
-E --> E3[评估指标：POS-K、DEL-Ke、INS-Ke等反事实指标]
-E --> E4[关键结果：全场景超越基线，建立保真度新基准]
+E --> E1[数据集：Avito（5.36亿请求）、美团（8.83亿请求）]
+E --> E2[基线：PRM、OCPM、YOLOR、RIA_small/big]
+E --> E3[关键结果：离线AUC Avito 0.7425/美团0.6730，在线CTR+2.11%]
 
 
 A --> F[核心价值]
 
-F --> F1[理论：首个将路径积分适配推荐系统，提出随机基线策略]
-F --> F2[实践：提供高保真解释，支持合规与用户信任构建]
-F --> F3[开源：代码与评估工具公开，助力后续研究]
-
-```mindmap
-## 研究背景：核心痛点
-- 排序与重排序 decouple
-  - 列表级评估模型表征弱，受 latency 限制架构简单
-  - 组合稀疏性：列表长度增加导致物品共现频率指数下降
-- 现有方案缺陷
-  - PRM/OCPM：分阶段建模，知识传递弱
-  - YOLOR：假设位置-上下文独立，大规模场景效率低
-## 核心框架：RIA
-- 1. 用户-候选双Transformer（UCDT）
-  - 输入：用户上下文特征（ profile+行为序列）、候选列表嵌入
-  - 编码：HSTU处理序列，目标注意力建模交互
-  - 输出：点wise CTR预测（σ(MLP(x_i'))）
-- 2. 上下文感知用户历史与目标（CUHT）
-  - PIAU：自注意力建模会话内历史-候选交互
-  - PTAU：位置感知注意力，关联目标列表与历史位置
-- 3. 列表级多HSTU（LMH）
-  - 层级建模：多层HSTU堆叠，捕捉物品依赖
-  - 输出：列表wise CTR预测，损失L2=二分类交叉熵
-- 4. 嵌入缓存（EC）
-  - 预计算：排序阶段缓存x_i''与H_k表征
-  - 存储：Redis缓存，降低重排序 latency
-- 5. 损失与推理
-  - 总损失：L_total = L1（点wise）+ L2（列表wise）
-  - 推理：并行计算+缓存复用，RIA_small latency 28.2ms
-## 实验验证
-- 数据集：Avito（5.36亿请求）、美团（8.83亿请求）
-- 基线：PRM、OCPM、YOLOR、RIA_small/big
-- 关键结果：离线AUC Avito 0.7425/美团0.6730，在线CTR+2.11%
-## 核心价值
-- 理论：首次统一排序与重排序，解决组合稀疏性
-- 实践：部署美团广告，CTR/CPM双提升，低延迟
-- 应用：电商广告、本地生活推荐等列表级CTR预测场景
+F --> F1[理论：首次统一排序与重排序，解决组合稀疏性]
+F --> F2[实践：部署美团广告，CTR/CPM双提升，低延迟]
+F --> F3[应用：电商广告、本地生活推荐等列表级CTR预测场景]
 ```
 
 
@@ -104,13 +76,13 @@ F --> F3[开源：代码与评估工具公开，助力后续研究]
 ##### 1. 四大核心模块
 | 模块名称               | 核心逻辑                                                                 | 关键细节                                                                 |
 |------------------------|--------------------------------------------------------------------------|--------------------------------------------------------------------------|
-| **用户-候选双Transformer（UCDT）** | 捕捉用户上下文与候选列表的细粒度交互                                     | 1. 输入：用户上下文特征（E^u，含profile+行为序列）、候选列表嵌入（X）；<br>2. 编码：HSTU处理序列，目标注意力计算x_i' = Attention(x_i, E^u')；<br>3. 点wise预测：\(\hat{y}_i^p = \sigma(MLP(x_i'))\)，损失L1=二分类交叉熵 |
+| **用户-候选双Transformer（UCDT）** | 捕捉用户上下文与候选列表的细粒度交互                                     | 1. 输入：用户上下文特征（E^u，含profile+行为序列）、候选列表嵌入（X）；<br>2. 编码：HSTU处理序列，目标注意力计算x_i' = Attention(x_i, E^u')；<br>3. 点wise预测：$`(\hat{y}_i^p = \sigma(MLP(x_i')))`$，损失L1=二分类交叉熵 |
 | **上下文感知用户历史与目标（CUHT）** | 解决UCDT孤立行为建模缺陷，捕捉位置敏感偏好                               | 1. PIAU：自注意力建模用户排序级历史（E_k）与目标列表（E_{L+1}）的交互，输出H_k；<br>2. PTAU：计算目标列表第o个位置与历史第o个位置的注意力，关联位置依赖 |
-| **列表级多HSTU（LMH）** | 层级建模列表内物品依赖，提升列表wise表征能力                             | 1. 适配层：MLP将CUHT输出x_o''转换为t_o；<br>2. 层级编码：I层HSTU堆叠（M_i = HSTU(M_{i-1})）；<br>3. 列表wise预测：\(\hat{y}_o^l = MLP(m_{I,o})\)，损失L2=二分类交叉熵 |
+| **列表级多HSTU（LMH）** | 层级建模列表内物品依赖，提升列表wise表征能力                             | 1. 适配层：MLP将CUHT输出x_o''转换为t_o；<br>2. 层级编码：I层HSTU堆叠（M_i = HSTU(M_{i-1})）；<br>3. 列表wise预测：$`(\hat{y}_o^l = MLP(m_{I,o}))`$，损失L2=二分类交叉熵 |
 | **嵌入缓存（EC）**     | 平衡推理效率，适配工业级 latency 要求                                     | 1. 预计算：排序阶段并行计算UCDT的x_i''与CUHT的H_k；<br>2. 缓存存储：Redis缓存Top-n候选与近期用户行为嵌入；<br>3. 重排序复用：直接调用缓存表征，避免重复计算 |
 
 ##### 2. 损失与推理流程
-- **总损失函数**：\(\mathcal{L}_{total} = \mathcal{L}_1 + \mathcal{L}_2\)（L1为点wise损失，L2为列表wise损失）；
+- **总损失函数**：$`(\mathcal{L}_{total} = \mathcal{L}_1 + \mathcal{L}_2)`$（L1为点wise损失，L2为列表wise损失）；
 - **推理流程**：1. 排序阶段：预计算并缓存UCDT/CUHT的核心表征；2. 重排序阶段：调用缓存，通过LMH计算列表wise CTR，选择最优列表P*。
 
 
